--- a/RaidLog.Spa/App/views/issueList.html
+++ b/RaidLog.Spa/App/views/issueList.html
@@ -13,21 +13,23 @@
     <div class='span6 well' data-bind='compose: listViewModel.selected'>
     </div>
 </div>
- <script id="issueListTemplate" type="text/html">
+<script id="issueListTemplate" type="text/html">
     <table class='table table-bordered table-condensed table-striped'>
         <thead>
-          <tr>
-            <th>#</th>
-            <th>Description</th>
-            <th>Resolved Date</th>
-          </tr>
+            <tr>
+                <th>#</th>
+                <th>Description</th>
+                <th>RAG</th>
+                <th class="dateCol">Resolved Date</th>
+            </tr>
         </thead>
         <tbody data-bind='foreach: itemsOnCurrentPage'>
-          <tr data-bind='click: $parent.setSelected, css: { selected: $data === $parent.selected() }'>
-            <td data-bind='text: issueNumber'></td>
-            <td data-bind='text: description'></td>
-            <td data-bind='text: resolvedDate'></td>
-          </tr>
+            <tr data-bind='click: $parent.setSelected, css: { selected: $data === $parent.selected() }'>
+                <td data-bind='text: issueNumber'></td>
+                <td data-bind='text: description'></td>
+                <td data-bind="text: ragStatus,css:ragClass"></td>
+                <td data-bind='text: resolvedDate'></td>
+            </tr>
         </tbody>
     </table>
 </script>
