--- a/RaidLog.Spa/App/views/issueDetails.html
+++ b/RaidLog.Spa/App/views/issueDetails.html
@@ -89,7 +89,7 @@
 
     <div class="controls-row">
  
-        <!-- Resolved Date -->
+        <!-- Expected Closure Date -->
         <div class="control-group span2" data-bind="css: { error: !expectedClosureDate.isValid() }">
             <label class="control-label" for="expectedClosureDate">Exp. Close:</label>
             <div class="controls">
