--- a/RaidLog.Spa/App/views/issueDetails.html
+++ b/RaidLog.Spa/App/views/issueDetails.html
@@ -135,7 +135,17 @@
             <button id="saveButton" name="saveButton" 
                     data-bind="enable:validation.isValid, click:save"    
                     class="btn btn-primary">Save</button>
+            
+            <button id="showActions" id="showActionsButton" data-bind="visible:!isNew(), click:showActions" >
+                <i class="icon-list"></i>
+                Actions
+            </button>
+            
+            <button id="addAction" data-bind="visible:!isNew(), click:addAction">
+                <i class="icon-plus-sign"></i>
+                Add Action
+            </button>
         </div>
     </div>
 
-</section>*
+</section>
