--- a/RaidLog.Spa/App/views/dependencyList.html
+++ b/RaidLog.Spa/App/views/dependencyList.html
@@ -1,1 +1,37 @@
-﻿<p>Assumptions</p>
+﻿<section><h1><span data-bind="text: projectCode"></span>: <span data-bind="    text: projectName"></span> Dependencies</h1>
+    <div class="row-fluid">
+        <div class="span6">
+            <div class="btn-group">
+                <button class="btn" data-bind="click: newDependency"><i class="icon-plus-sign icon-white"></i> Add New Dependency</button>
+                <button class="btn" data-bind="click: refresh"><i class="icon-refresh icon-white"></i> Refresh</button>
+            </div>
+            <div id="issueListContainer" data-bind="pagedGrid: listViewModel, pagedGridTemplate: 'dependencyListTemplate'">
+            </div>
+            <h2 data-bind="visible: listViewModel.filteredData().length == 0" class="alert alert-info">No Dependencies</h2>
+    
+        </div>
+        <div class='span6 well' data-bind='compose: listViewModel.selected'>
+        </div>
+    </div>
+
+    <script id="dependencyListTemplate" type="text/html">
+        <table class='table table-bordered table-condensed table-striped'>
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Description</th>
+                    <th>Status</th>
+                    <th class="dateCol">Required By</th>
+                </tr>
+            </thead>
+            <tbody data-bind='foreach: itemsOnCurrentPage'>
+                <tr data-bind='click: $parent.setSelected, css: { selected: $data === $parent.selected() }'>
+                    <td data-bind='text: dependencyNumber'></td>
+                    <td data-bind='text: description'></td>
+                    <td data-bind="text: status, css: ragClass"></td>
+                    <td data-bind='text: requiredByDate'></td>
+                </tr>
+            </tbody>
+        </table>
+    </script>
+</section>
