--- a/RaidLog.Spa/App/views/issueDetails.html
+++ b/RaidLog.Spa/App/views/issueDetails.html
@@ -61,7 +61,7 @@
         </div>
         
         <!-- RAG Status -->
-        <div class="control-group span2" data-bind="css: { error: !owner.isValid() }">
+        <div class="control-group span2" data-bind="css: { error: !ragStatus.isValid() }">
             <label class="control-label" for="ragStatus">RAG Status</label>
             <div class="controls">
                 <select name="ragStatus" id="ragStatus" data-bind="options:ragStatuses,value:ragStatus" class="input-small"></select>
@@ -69,10 +69,10 @@
         </div>
         
         <!-- Previous RAG Status -->
-        <div class="control-group span2" data-bind="css: { error: !owner.isValid() }">
+        <div class="control-group span2">
             <label class="control-label" for="previousRagStatus">Prev. RAG</label>
             <div class="controls">
-                <input id="previousRagStatus" name="previousRagStatus" type="text" placeholder="Green" class="input-small" data-bind="value: previousRagStatus">
+                <input id="previousRagStatus" name="previousRagStatus" type="text" disabled="disabled" placeholder="Green" class="input-small" data-bind="value: previousRagStatus">
     
             </div>
         </div>
