Added link to dependencies page from projects and made DependenciesController an actual Controller

--- a/RaidLog.Spa/App/views/projectList.html
+++ b/RaidLog.Spa/App/views/projectList.html
@@ -46,7 +46,9 @@
                     </a>
                 </td>
                 <td>
-                    <span data-bind="text: $data.activeDependencies">0</span> / <span data-bind="text: $data.closedDependencies">0</span>
+                    <a data-bind="attr: {href:projectDependenciesLink}">
+                        <span data-bind="text: $data.activeDependencies">0</span> / <span data-bind="text: $data.closedDependencies">0</span>
+                    </a>
                 </td>
                 <td>
                     <span data-bind="text: $data.activeQueries">0</span> / <span data-bind="text: $data.closedQueries">0</span>
