--- a/RaidLog.Spa/App/views/projectList.html
+++ b/RaidLog.Spa/App/views/projectList.html
@@ -51,7 +51,9 @@
                     </a>
                 </td>
                 <td>
-                    <span data-bind="text: $data.activeQueries">0</span> / <span data-bind="text: $data.closedQueries">0</span>
+                    <a data-bind="attr:{href:projectQueriesLink}">
+                       <span data-bind="text: $data.activeQueries">0</span> / <span data-bind="text: $data.closedQueries">0</span>
+                    </a>
                 </td>
                 <td>
                     <a data-bind="attr: { href: projectActionsLink }">
